--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HTML Portfolio Exercise</title>
 </head>
 <body>
-    <h1>Louis van Bommel's Porttfolio</h1>
+    <h1>Louis van Bommel's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <p>This is a exercise for the Udemy course: The Complete 2023 Web Development Bootcamp</p>
     <p>This exercise is learning you to use HTML and in a later stage CSS to make your own webpages</p>
