--- a/public/contact2.html
+++ b/public/contact2.html
@@ -9,7 +9,7 @@
    
 <section class="contact" id="contact">
 <h2 class="heading">Contact <span>Me!</span></h2>
-<form action="mailto:ljwvanbommel@gmail.com" method="post" enctype="text/plain">
+<form action="contact.php" method="post">
 <div class="input-box">
 <input type="text" name="name" placeholder="Full Name" required> <input type="email" name="email" placeholder="Email Address" required>
 </div>
